# Psi-Function-Site

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: .deploy-staging.yml.swp  ci.yml  deploy-staging.yml  deploy.yml  deploy_testing.yml  promote_production.yml  promote_staging.yml
app/: __init__.py  config.py  extensions.py
app/blueprints/admin/: routes.py
app/blueprints/auth/: routes.py
app/blueprints/health/: routes.py
app/services/ai/: client.py
app/static/css/: complete_design_tokens.css  site.bak3_css  site.css  tokens.css
app/static/js/: app.js  chat-widget.js  graph-view.js  main.js
app/templates/: base.html  index.html
app/templates/auth/: login.html
app/templates/includes/: site_header.html  (+1 more)
consulting_site.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deploy/env/: production.app.env.example  staging.app.env.example
deploy/nginx/: consulting-site  consulting-site.conf  production.conf  staging.conf  testing.conf
deploy/scripts/: bootstrap_local.sh  bootstrap_permissions.sh  bootstrap_runtime.sh  deploy_env.sh  deploy_release.sh  install_nginx_site.sh  install_systemd_service.sh  rollback_release.sh  smoke_test.sh  verify_revision.sh
deploy/systemd/: consulting-site.service  consulting-site@.service
infra/bootstrap/: bootstrap_host.sh  install_fail2ban.sh
infra/cloud-init/: base.yaml  dockerless-flask.yaml
infra/hardening/: configure_fail2ban.sh  unwhitelist_my_ip.sh  whitelist_my_ip.sh
infra/terraform/: README.md
tests/: conftest.py  test_public_routes.py
(+37 files in other folders)
