[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consulting-site"
version = "0.1.0"
description = "Independent consulting website starter"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.1",
  "Flask-Login>=0.6",
  "Flask-WTF>=1.2",
  "Flask-SQLAlchemy>=3.1",
  "Flask-Migrate>=4.0",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "gunicorn>=23.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-flask>=1.3",
  "pytest-cov>=5.0",
  "ruff>=0.11",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
